--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <ul class="list-unstyled">
             <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i><strong>Hệ thống máy móc hiện đại:</strong> Máy giặt, máy sấy công nghệ mới, đảm bảo quần áo của bạn không chỉ sạch sẽ mà còn được bảo vệ tối ưu, giữ nguyên phom dáng và màu sắc.</li>
             <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i><strong>Quy trình tự động, nhanh chóng:</strong> Tiết kiệm thời gian tối đa để bạn dành cho việc khám phá và nghỉ ngơi.</li>
-            <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i><strong>Không gian sạch sẽ, thoáng đãng:</strong> Một nơi bạn có thể thư giãn trong khi chờ đợi. (Ví dụ: ảnh `imgz/a (9).jpg`)</li>
+            <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i><strong>Không gian sạch sẽ, thoáng đãng:</strong> Một nơi bạn có thể thư giãn trong khi chờ đợi.</li>
             <li class="mb-2"><i class="fas fa-check-circle text-primary me-2"></i><strong>Sự hỗ trợ tận tình:</strong> Dù là tự phục vụ, đội ngũ nhân viên của chúng tôi luôn sẵn sàng hướng dẫn, giải đáp mọi thắc mắc và hỗ trợ bạn trong suốt quá trình sử dụng dịch vụ. Bởi chúng tôi tâm niệm, sự chủ động của bạn kết hợp với sự tận tâm của chúng tôi sẽ tạo nên trải nghiệm hoàn hảo.</li>
           </ul>
 
